@@ -1,16 +1,17 @@
-import java.util.*;
 import java.io.*;
+import java.util.*;
 
 // ===================== Queue =====================
 class Queue {
-    private ArrayList<String> list = new ArrayList<>();
+    private final LinkedList<String> list = new LinkedList<>();
 
     public void enqueue(String x) {
         list.add(x);
     }
 
     public String dequeue() {
-        return list.remove(0);
+        if (list.isEmpty()) throw new RuntimeException("Queue is empty");
+        return list.removeFirst();
     }
 
     public boolean isEmpty() {
@@ -25,29 +26,50 @@ class Queue {
         return list.get(i);
     }
 
+    @Override
     public String toString() {
         return list.toString();
     }
 }
 
-// ===================== Stack =====================
+// ===================== Stack (String - for operators & tree) =====================
 class Stack {
-    private ArrayList<String> list = new ArrayList<>();
+    private final ArrayList<String> list = new ArrayList<>();
 
     public void push(String x) {
         list.add(x);
     }
 
     public String pop() {
+        if (list.isEmpty()) throw new RuntimeException("Stack is empty");
         return list.remove(list.size() - 1);
     }
 
     public String peek() {
+        if (list.isEmpty()) throw new RuntimeException("Stack is empty");
         return list.get(list.size() - 1);
     }
 
     public boolean isEmpty() {
         return list.isEmpty();
+    }
+
+    public int size() {
+        return list.size();
+    }
+}
+
+// ===================== Stack (Double - for evaluation) =====================
+class DoubleStack {
+    private final ArrayList<Double> list = new ArrayList<>();
+
+    public void push(double x) {
+        list.add(x);
+    }
+
+    public double pop() {
+        if (list.isEmpty()) throw new RuntimeException("Stack is empty");
+        return list.remove(list.size() - 1);
     }
 
     public int size() {
@@ -68,6 +90,7 @@ class BST {
 
     Node root;
 
+    // Build Expression Tree from Postfix
     public void buildFromPostfix(Queue q) {
         Stack st = new Stack();
         HashMap<String, Node> map = new HashMap<>();
@@ -79,6 +102,8 @@ class BST {
                 map.put(t + i, new Node(t));
                 st.push(t + i);
             } else {
+                if (st.size() < 2) throw new RuntimeException("Invalid expression");
+
                 Node right = map.get(st.pop());
                 Node left = map.get(st.pop());
 
@@ -92,8 +117,11 @@ class BST {
                 root = op;
             }
         }
+
+        if (root == null) throw new RuntimeException("Invalid Tree");
     }
 
+    // Traversals
     public void preorder(Node n, PrintWriter out) {
         if (n == null) return;
         out.print(n.val + " ");
@@ -117,9 +145,9 @@ class BST {
 
     private boolean isNumber(String s) {
         try {
-            Double.parseDouble(s);
+            Double.valueOf(s);
             return true;
-        } catch (Exception e) {
+        } catch (NumberFormatException e) {
             return false;
         }
     }
@@ -137,14 +165,18 @@ class HashTable {
     }
 
     int hash(double x) {
-        return ((int) x) % size;
+        return Math.abs((int) x) % size;
     }
 
     public void insert(double x) {
         int idx = hash(x);
+        int start = idx;
+
         while (table[idx] != -1) {
             idx = (idx + 1) % size;
+            if (idx == start) throw new RuntimeException("HashTable Full");
         }
+
         table[idx] = x;
     }
 
@@ -158,21 +190,24 @@ class HashTable {
 // ===================== Main =====================
 public class Main {
 
+    // Operator precedence
     static int precedence(String op) {
         if (op.equals("+") || op.equals("-")) return 1;
         if (op.equals("*") || op.equals("/")) return 2;
         return 0;
     }
 
+    // Check if token is number
     static boolean isNumber(String s) {
         try {
-            Double.parseDouble(s);
+            Double.valueOf(s);
             return true;
-        } catch (Exception e) {
+        } catch (NumberFormatException e) {
             return false;
         }
     }
 
+    // Convert Infix to Postfix
     static Queue toPostfix(Queue q) {
         Queue output = new Queue();
         Stack st = new Stack();
@@ -185,10 +220,10 @@ public class Main {
             } else if (t.equals("(")) {
                 st.push(t);
             } else if (t.equals(")")) {
-                while (!st.peek().equals("(")) {
+                while (!st.isEmpty() && !st.peek().equals("(")) {
                     output.enqueue(st.pop());
                 }
-                st.pop();
+                if (!st.isEmpty()) st.pop();
             } else {
                 while (!st.isEmpty() &&
                         precedence(st.peek()) >= precedence(t)) {
@@ -205,36 +240,40 @@ public class Main {
         return output;
     }
 
+    // Evaluate Postfix (FIXED: no unnecessary String conversions)
     static double evaluate(Queue q) {
-        Stack st = new Stack();
+        DoubleStack st = new DoubleStack();
 
         for (int i = 0; i < q.size(); i++) {
             String t = q.get(i);
 
             if (isNumber(t)) {
-                st.push(t);
+                st.push(Double.parseDouble(t));
             } else {
-                double b = Double.parseDouble(st.pop());
-                double a = Double.parseDouble(st.pop());
+                if (st.size() < 2) throw new RuntimeException("Invalid expression");
+
+                double b = st.pop();
+                double a = st.pop();
 
                 switch (t) {
-                    case "+": st.push(String.valueOf(a + b)); break;
-                    case "-": st.push(String.valueOf(a - b)); break;
-                    case "*": st.push(String.valueOf(a * b)); break;
-                    case "/":
+                    case "+" -> st.push(a + b);
+                    case "-" -> st.push(a - b);
+                    case "*" -> st.push(a * b);
+                    case "/" -> {
                         if (b == 0) throw new ArithmeticException("Division by zero");
-                        st.push(String.valueOf(a / b));
-                        break;
+                        st.push(a / b);
+                    }
                 }
             }
         }
 
-        return Double.parseDouble(st.pop());
+        return st.pop();
     }
 
+    // Convert string to tokens
     static Queue tokenize(String s) {
         Queue q = new Queue();
-        String[] arr = s.split(" ");
+        String[] arr = s.trim().split("\\s+");
         for (String x : arr) {
             q.enqueue(x);
         }
@@ -242,13 +281,16 @@ public class Main {
     }
 
     public static void main(String[] args) {
-        try {
-            // قراءة من ملف
+        try (
             Scanner fileReader = new Scanner(new File("input.txt"));
-            String input = fileReader.nextLine();
+            PrintWriter out = new PrintWriter("output.txt")
+        ) {
 
-            // كتابة في ملف
-            PrintWriter out = new PrintWriter("output.txt");
+            if (!fileReader.hasNextLine()) {
+                throw new RuntimeException("Empty file");
+            }
+
+            String input = fileReader.nextLine();
 
             Queue infix = tokenize(input);
             out.println("Queue: " + infix);
@@ -259,7 +301,7 @@ public class Main {
             double result = evaluate(postfix);
             out.println("Result: " + result);
 
-            // BST
+            // Build Expression Tree
             BST tree = new BST();
             tree.buildFromPostfix(postfix);
 
@@ -275,7 +317,7 @@ public class Main {
             tree.postorder(tree.root, out);
             out.println();
 
-            // HashTable
+            // Hash Table
             HashTable ht = new HashTable(10);
 
             for (int i = 0; i < infix.size(); i++) {
@@ -288,10 +330,9 @@ public class Main {
             out.println("Hash Table:");
             ht.print(out);
 
-            out.close();
-            fileReader.close();
+            System.out.println("Program executed successfully. Check output.txt");
 
-        } catch (Exception e) {
+        } catch (IOException | RuntimeException e) {
             System.out.println("Error: " + e.getMessage());
         }
     }
